2017-07-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-show-form-hint): Clarify echo message.
	* w3m-form.el (w3m-form-expand-form, w3m-form-unexpand-form):
	Work for mouse-clicking ([emacs-w3m:12731]).

2017-07-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-show-form-hint): Expand form so at to show text fully.
	* w3m-form.el (w3m-form-input): Revert 2017-06-30 change.
	(w3m-form-expand-form, w3m-form-unexpand-form): New functions.
	[emacs-w3m:12728]

2017-07-05  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-form.el (w3m-form-input-textarea-mode-hook): Fix mismatched paren;
	use outline-show-all instead of show-all if available.

2017-07-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-content-type-alist): Use mailcap.
	(w3m-image-viewer): Abolish.
	(w3m-create-page): Allow user to download file of unknown content-type.

2017-06-30  Vladimir Sedach  <vas@oneofus.la>

	* w3m-form.el (w3m-form-input): If input is readonly, put the input
	value on the kill ring in addition to displaying it in the echo area.
	[emacs-w3m:12724]

2017-06-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mime-w3m.el, w3m-antenna.el, w3m-bookmark.el, w3m-cookie.el,
	w3m-dtree.el, w3m-ems.el, w3m-favicon.el, w3m-filter.el, w3m-form.el,
	w3m-namazu.el, w3m-perldoc.el, w3m-search.el, w3m-session.el,
	w3m-symbol.el, w3m.el:
	Remove `:size 0' from defcustoms ([emacs-w3m:12709]).

2017-06-26  Vladimir Sedach  <vas@oneofus.la>

	* w3m.el (w3m-url-completion-map): Bind "?" to self-insert-command.
	[emacs-w3m:12721]

2017-06-22  Vladimir Sedach  <vas@oneofus.la>

	* w3m.el (w3m-external-view-temp-directory): New user option.
	(w3m-external-view): Use it control which directory files are saved to
	before being opened with the external viewer.  [emacs-w3m:12708]

2017-06-20  Vladimir Sedach  <vas@oneofus.la>

	* w3m.el (w3m-goto-url-new-session): Handle POST data.
	[emacs-w3m:12704]

2017-06-14  Boruch Baum  <boruch_baum@gmx.com>
